feat: cascade booking history cards and guard booking date input
- Rework the card move-in into one synchronised ease-in-out
- Stagger a group's cards so they cascade in instead of all sliding at once
- Always expand at least one status group
- Fade cards out on collapse
- Reject dates outside the bookable range on the booking page
- Keep the admin popup close button aligned when delete is hidden

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>